--- a/YNK_front/project/page/component/index.wxml
+++ b/YNK_front/project/page/component/index.wxml
@@ -1,6 +1,13 @@
 <!-- 首页 -->
 <wxs module="beautify" src="../../util/beautify.wxs" />
 <view class="main">
+    <view class="search-box" hover-class="none" hover-stop-propagation="false">
+        <input type="text" class="search" confirm-type="search" bindinput="bindsearch" maxlength='30'>
+            <button>
+                <icon class="" type="search" size="23" color=""></icon>
+            </button>
+        </input>
+    </view>
     <view class="swiper-box" hover-class="none" hover-stop-propagation="false">
         <view class="dec" hover-class="none" hover-stop-propagation="false"></view>
         <swiper indicator-dots="true" autoplay="true" interval="3000" duration="500" circular="true">
@@ -13,50 +20,32 @@
     </view>
     <view class="selected">
         <view class="select-title">
-            <text>精选主题</text>
+            <text>热度TOP5</text>
         </view>
-        <view class="select-top">
-            <view class="select-top-small">
-                <navigator url="list/list">
-                    <image src="/image/s1.png"></image>
-                </navigator>
-            </view>
-            <view class="select-top-small">
-                <navigator url="list/list">
-                    <image src="/image/s2.png"></image>
-                </navigator>
-            </view>
-        </view>
-        <view class="select-bottom">
-            <navigator url="list/list">
-                <image src="/image/s3.png"></image>
+        <scroll-view class="rank-box" scroll-x="{{true}}" scroll-y="{{false}}">
+            <navigator wx:for="{{good_list}}" wx:key="index" data-goodid="{{item.good_id}}" url="details/details?good_id={{item.good_id}}" class="good-box rank-item">
+                <image class="good-gphoto" src="{{item.gphoto}}" mode="aspectFill" lazy-load="true" />
+                <view class="good-name1">{{item.name}}</view>
             </navigator>
-        </view>
+        </scroll-view>
     </view>
     <view class="orderBy" hover-class="none" hover-stop-propagation="false">
         <view class='menu'>
             <view class='menu-list'>
-                <view class='menu-nav' data-hi="{{ idx }}" bindtap="menuClick">
+                <view class='menu-nav {{ortherBy==0?"menu-nav-on":""}} ' data-index="0" bindtap="menuClick">
                     <text class='menu-text'>综合排序</text>
-                    <icon class="iconfont icon-right {{menu_direction[0]==1?'icon-down':''}}" >
-                        
-                    </icon>
-
+                    <!-- <icon class="iconfont icon-right {{menu_direction[0]==1?'icon-down':''}}"></icon> -->
                 </view>
-                <view class='menu-nav' data-hi="{{ idx }}" bindtap="menuClick">
+                <view class='menu-nav {{ortherBy==1?"menu-nav-on":""}}' data-index="1" bindtap="menuClick">
                     <text class='menu-text'>附近</text>
-                    <icon class="iconfont icon-right {{menu_direction[1]==1?'icon-down':''}} " >
-                        
-                    </icon>
+                    <!-- <icon class="iconfont icon-right {{menu_direction[1]==1?'icon-down':''}} "></icon> -->
                 </view>
-                <view class='menu-nav' data-hi="{{ idx }}" bindtap="menuClick">
+                <view class='menu-nav {{ortherBy==2?"menu-nav-on":""}}' data-index="2" bindtap="menuClick">
                     <text class='menu-text'>热度</text>
                 </view>
-                <view class='menu-nav' data-hi="{{ idx }}" bindtap="menuClick">
+                <view class='menu-nav {{ortherBy==3?"menu-nav-on":""}}' data-index="3" bindtap="menuClick">
                     <text class='menu-text'>筛选</text>
-                    <icon class="iconfont icon-right {{menu_direction[2]==1?'icon-down':''}}">
-                        
-                    </icon>
+                    <!-- <icon class="iconfont icon-right {{menu_direction[2]==1?'icon-down':''}}"></icon> -->
                 </view>
             </view>
         </view>
@@ -67,7 +56,7 @@
         </view> -->
         <view class="newgood-box">
             <view class="newgood-list" wx:for="{{good_list}}" wx:key="key">
-                <navigator class="nav" url="details/details">
+                <navigator data-goodid="{{}}" class="nav" url="details/details?good_id={{item.good_id}}" hover-class="navigator-hover">
                     <view class="nav-left" hover-class="none" hover-stop-propagation="false">
                         <image mode='aspectFill' src="{{item.gphoto}}"></image>
                     </view>
@@ -103,6 +92,7 @@
         </view>
     </view>
     <view class="bottom" wx:if="{{loading}}">
-        <text class="loading-text" selectable="false" space="false" decode="false">加载中</text>
+        <!-- <text class="loading-text" selectable="false" space="false" decode="false"></text> -->
+        加载中...
     </view>
 </view>
