--- a/YNK_front/project/page/component/index.wxss
+++ b/YNK_front/project/page/component/index.wxss
@@ -15,7 +15,42 @@ swiper{
     overflow: hidden;
     border-radius: 10rpx;
 }
+button::after{border:0}
+.navigator-hover{
+    background-color: #ededed;
+    box-shadow: 0 0 10rpx 5rpx rgba(0,0,0,0.1)
+}
 
+
+
+.search-box{
+    /* position: fixed; */
+    
+}
+.search {
+    position: relative;
+    /* top:30rpx; */
+    /* left:30rpx; */
+    background-color:rgba(237,237,237,0.8);
+    border-radius:4rpx;
+    z-index:4;
+    padding:15rpx;
+    width:88%;
+    margin:0 auto;
+    /* overflow: auto; */
+
+}
+.search input{
+}
+.search button{
+    display: inline-block;
+    position: absolute;
+    right:0rpx;
+    top:0rpx;
+    border: 0;
+    background-color: transparent;
+}
+    
 .dec{
     position: absolute;
     width: 100%;
@@ -27,8 +62,10 @@ swiper{
 .swiper-box{
     /* background-color: #AB956D; */
     position: relative;
+    margin-top: 20rpx;
     background-position-y: -100rpx;
 }
+
 .select-title,.newgood-title{
     width: 100%;
     padding:30rpx 0;
@@ -36,25 +73,46 @@ swiper{
     color: #AB956D;
     text-align: center;
 }
-.select-top-small{
-    width: 375rpx;
-    height: 375rpx;
-    float: left;
+
+.rank-box{
+    /* height: 550rpx; */
+    white-space: nowrap;
 }
-.select-bottom,.select-top{
+.rank-item{
+    width: 300rpx;
+    margin: 20rpx;
+    border-radius: 10rpx;
+    overflow: hidden;
+    box-shadow: 0 0 10rpx 5rpx rgba(0,0,0,0.1);
+    display: inline-block
+}
+.good-gphoto{
+    height: 420rpx;
     width: 100%;
-    height: 375rpx;
 }
-.select-top-small image,.select-bottom image,.select-top-small navigator,.select-bottom navigator{
-    display: block;
+.selected .good-name1{
     width: 100%;
-    height: 100%;
+    /* display:-webkit-box; */
+    -webkit-box-orient:vertical;
+    overflow:hidden;
+    text-overflow:ellipsis;
+    -webkit-line-clamp:2;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size:10pt;
+    padding:15rpx;
+    color:gray; 
 }
+
+
+
 
 
 
   /* 下拉菜单 */
   /* 下拉菜单导航 */
+.orderBy{
+    /* margin-bottom: 50rpx; */
+}
   .menu-po {
     position: relative;
     left: 0;
@@ -81,14 +139,19 @@ swiper{
 .menu-list {
     display: flex;
     justify-content: space-between;
-    height: 90rpx;
+    /* height: 75rpx; */
+    padding: 20rpx;
 }
 
 .menu-nav {
-    width: 25%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    /* background-color: #ededed; */
+    width: 20%;
+    border-radius: 4rpx;
+    text-align: center; 
+    padding: 20rpx;
+}
+.menu-nav-on{
+    background-color: #ededed;
 }
 
 .menu-nav image {
@@ -187,15 +250,17 @@ swiper{
     margin:0 0rpx 20rpx 0;
     border-radius: 4px;
     overflow: hidden;
-    background: #f5f6f5;
+    padding-bottom: 25rpx;
+    border-bottom: 2rpx solid #ededed
 }
 
 .nav image{
     width:250rpx;
     height:250rpx;
+    border-radius: 4rpx;
 }
 .newgood-text{
-    font-size: 32rpx;
+    font-size: 30rpx;
     text-align: left;
 }
 .nav{
@@ -212,8 +277,8 @@ swiper{
 .nav-right{
     position: relative;
     height:220rpx;
-    width: 60%;
-    padding: 15rpx;
+    width: 63%;
+    padding: 15rpx 0 15rpx 15rpx;
 }
 .good-name{      /*只显示两行+超出部分省略号*/
     display: -webkit-box;
@@ -254,9 +319,9 @@ swiper{
 .newgood-text-school{
     color: rosybrown;
 }
-.botton{
+.bottom{
     height: 60rpx;
-    background-color: #f5f5f5;
+    /* background-color: #f5f5f5; */
     color:gray;
     text-align: center;
 }
