--- a/YNK_front/project/page/component/orders/orders.wxml
+++ b/YNK_front/project/page/component/orders/orders.wxml
@@ -1,24 +1,57 @@
 <view class="main">
-    <navigator url="../address/address">
-        <view wx:if="{{hasAddress}}" class="orders-address">
-            <text class="orders-address-name">收货人: {{address.name}}</text>
-            <text class="orders-address-phone">电话: {{address.phone}}</text>
-            <view class="orders-address-detail">{{address.detail}}</view>
+    <view class="good_box">
+        <view class="swiper-box" hover-class="none" hover-stop-propagation="false">
+            <view class="dec" hover-class="none" hover-stop-propagation="false"></view>
+            <swiper indicator-dots="true" autoplay="true" interval="3000" duration="500" circular="true">
+                <block wx:for="{{good_images}}" wx:key="{{index}}">
+                    <swiper-item>
+                        <image src="{{item}}" class="slide-image" width="100%" mode="aspectFill" />
+                    </swiper-item>
+                </block>
+            </swiper>
         </view>
-        <view wx:else class="orders-no-address">添加收货地址</view>
-    </navigator>
-
-    <view class="orders-box">
-        <view wx:for="{{orders}}" wx:key="index" class="orders-list">
-            <image class="orders-thumb" src="{{item.image}}"></image>
-            <view class="orders-pro-name">{{item.title}}</view>
-            <view class="orders-pro-price">￥{{item.price}}</view>
-            <view class="orders-count-num">×{{item.num}}</view>
-        </view>
+        <text class="good_name" selectable="false" space="false" decode="false">
+            {{good_name}}
+        </text>
+        <text class="good_price" selectable="false" space="false" decode="false">
+            ¥{{good_price}}
+        </text>
     </view>
+    <view class="pay-type ">
+        <picker class="right-arrow" range="{{pay_type_arr}}" value="{{pay_type}}" bindchange="bindPickerChange">
+            <button class="picker pay-btn">
+                <view class="pay-btn-left">
+                    <text>{{pay_type_arr[pay_type]}}</text>
+                </view>
+                <view class="pay-btn-right">
+                    <text class="text-placeholder">交易方式</text>
+                </view>
+            </button>
+        </picker>
+        <view wx:if="{{pay_type==1}}" class="tips" hover-class="none" hover-stop-propagation="false">
+        <button bindtap="tipPsb">关于配送帮</button>   
+    </view>
+         
+    </view>
+    <view class="pay-addres">
 
-    <view class="orders-footer">
+        <view class="" hover-class="none" hover-stop-propagation="false">
+            <textarea placeholder="{{pay_type==0?'面交地址，或与买家商量':'配送地址'}}" bindinput="changeAddress" class="distribution-address" type="text"></textarea>
+            <view class="div-line"></view>
+            <input class="distribution-phone" type="text" placeholder="电话" bindinput="changePhone" ></input>
+        </view>
+
+    </view>
+    <navigator url="../address/address">
+        <!-- <view wx:else class="orders-no-address">添加收货地址</view> -->
+    </navigator>
+    <view class="orders-footer" wx:if="{{pay_type==0}}">
+        <view class="orders-footer-total"></view>
+        <view class="orders-footer-btn" bindtap="toPay">确定</view>
+    </view>
+    <view class="orders-footer" wx:if="{{pay_type==1}}">
         <view class="orders-footer-total">付款合计：￥{{total}}</view>
         <view class="orders-footer-btn" bindtap="toPay">去付款</view>
     </view>
+
 </view>
