--- a/YNK_front/project/page/component/publish/publish.wxss
+++ b/YNK_front/project/page/component/publish/publish.wxss
@@ -1,5 +1,5 @@
 /* page/component/publish/publish.wxss */
-/* @import "../../common/iconfont.wxss"; */
+@import "../../common/iconfont.wxss";
 
 page{
   padding-bottom: 50rpx;
@@ -14,7 +14,10 @@ page{
   color: gray;
 }
 
-
+.main{
+  padding-top: 10rpx;
+  padding-bottom: 100rpx;
+}
 .category-btn{
   display: flex;
   justify-content: space-between;
@@ -92,14 +95,22 @@ button::after {
   text-align: center;
 }
 .add-img{
-  background-color: #AB956D !important;
-  color: #eeeeee !important;
+  background-color: transparent !important;
+  /* color: #eeeeee !important; */
   display:block;
-  margin:0 auto
+  margin:0 auto;
+  padding: 0;
+  height: 200rpx;
+  width: 200rpx;
+}
+.add-img image{
+  height: 200rpx !important;
+  width: 200rpx !important;
 }
 .image{
   width: 200rpx;
   height:200rpx;
+  border-radius: 4rpx;
 }
 .image-wrap{
   position: relative;
@@ -115,9 +126,8 @@ button::after {
   /* height: 20rpx; */
   transform: scale(1.8)
 }
-.image-opera{
-  text-align: center;
-}
+.image-opera button{
+font-size: 0}
 
 
 
@@ -135,7 +145,7 @@ button::after {
 .submit{
   display: block;
   position: fixed;
-  bottom:10rpx;
+  bottom:0rpx;
   width: 100%;
   background-color: white;
   border-radius: 10rpx;
@@ -143,8 +153,17 @@ button::after {
 }
 .submit-btn{
   background-color: rgba(255,255,255,1) ;
-  color:rosybrown;
+  /* color:#004461; */
+  color: rosybrown;
   background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 80rpx;
+}
+.submit-btn image{
+  width: 50rpx;
+  height: 50rpx;
 }
 .icon-fabu{
   color:rosybrown;
