--- a/YNK_front/project/page/component/category/category.wxss
+++ b/YNK_front/project/page/component/category/category.wxss
@@ -20,7 +20,9 @@ page {
   color: white;
   padding: 30rpx 0 30rpx 40rpx;
 }
-
+.wc-on{
+  background-color: rgb(0, 50, 70);
+}
 .page-content {
   /* padding-top: 300rpx; */
   overflow: scroll;
@@ -132,7 +134,7 @@ page {
 }
 .product-list image {
   width: 100%;
-  height: 300rpx;
+  height: 400rpx;
   /* margin-bottom: 20rpx; */
 }
 
